--- a/gitnote.html
+++ b/gitnote.html
@@ -131,8 +131,17 @@ This is an HTML header
 </h2>
 <p><span class="math display">\[f(x) = x^2 \]</span></p>
 <ul>
-<li><code>git init</code> : this initializes repository</li>
+<li><p><code>git init</code> : this initializes repository</p></li>
+<li><p><code>git status</code>: this tells us the status of the repository</p></li>
+<li><code>git add</code>: adds files to be tracked</li>
+<li><p><code>git commit</code>: dedicate myself to a version</p></li>
 </ul>
+<hr />
+<div id="tracking-changes" class="section level3">
+<h3>tracking changes</h3>
+<p>now what…</p>
+<p>Hello again</p>
+</div>
 </div>
 
 
